--- a/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
+++ b/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
@@ -353,6 +353,45 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FQmKIAd57_2R",
+        "outputId": "8822f821-a7ce-4b00-901b-e4ecd1f8ef86"
+      },
+      "source": [
+        "type(df['Reviews'][0])"
+      ],
+      "execution_count": 380,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 380
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4uiRuTd48Dpn"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
