--- a/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
+++ b/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
@@ -61,7 +61,7 @@
         "from datetime import datetime\n",
         "from datetime import date\n"
       ],
-      "execution_count": 337,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "path = '/content/drive/MyDrive/Colab Notebooks/projects/EDA - playstore app review analysis/DAT files/Copy of Play Store Data.csv'\n",
         "df = pd.read_csv(path)"
       ],
-      "execution_count": 202,
+      "execution_count": 425,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         " \n",
         "  return column.replace(' ','/').replace(',','').replace('.','/').replace('?',np.nan).replace('NA',np.nan)"
       ],
-      "execution_count": 331,
+      "execution_count": 426,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "  except:\n",
         "    return column    "
       ],
-      "execution_count": 284,
+      "execution_count": 427,
       "outputs": []
     },
     {
@@ -140,15 +140,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 314
         },
         "id": "HkB-8mj3_7E_",
-        "outputId": "2447af8b-e7fc-4855-ea2d-f657e458db22"
+        "outputId": "7119b854-a37d-48bc-f0e5-f44152449703"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 368,
+      "execution_count": 458,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,10 +176,10 @@
               "      <th>Category</th>\n",
               "      <th>Rating</th>\n",
               "      <th>Reviews</th>\n",
-              "      <th>Size</th>\n",
+              "      <th>Size in mega-bytes</th>\n",
               "      <th>Installs</th>\n",
               "      <th>Type</th>\n",
-              "      <th>Price</th>\n",
+              "      <th>Price in dollars</th>\n",
               "      <th>Content Rating</th>\n",
               "      <th>Genres</th>\n",
               "      <th>Last Updated</th>\n",
@@ -193,9 +193,9 @@
               "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.1</td>\n",
-              "      <td>159</td>\n",
-              "      <td>19M</td>\n",
-              "      <td>10,000+</td>\n",
+              "      <td>159.0</td>\n",
+              "      <td>19</td>\n",
+              "      <td>10000</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -209,9 +209,9 @@
               "      <td>Coloring book moana</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>3.9</td>\n",
-              "      <td>967</td>\n",
-              "      <td>14M</td>\n",
-              "      <td>500,000+</td>\n",
+              "      <td>967.0</td>\n",
+              "      <td>14</td>\n",
+              "      <td>500000</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -225,9 +225,9 @@
               "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.7</td>\n",
-              "      <td>87510</td>\n",
-              "      <td>8.7M</td>\n",
-              "      <td>5,000,000+</td>\n",
+              "      <td>87510.0</td>\n",
+              "      <td>8.7</td>\n",
+              "      <td>5000000</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -241,9 +241,9 @@
               "      <td>Sketch - Draw &amp; Paint</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.5</td>\n",
-              "      <td>215644</td>\n",
-              "      <td>25M</td>\n",
-              "      <td>50,000,000+</td>\n",
+              "      <td>215644.0</td>\n",
+              "      <td>25</td>\n",
+              "      <td>50000000</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Teen</td>\n",
@@ -257,9 +257,9 @@
               "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.3</td>\n",
-              "      <td>967</td>\n",
-              "      <td>2.8M</td>\n",
-              "      <td>100,000+</td>\n",
+              "      <td>967.0</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>100000</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -286,7 +286,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 368
+          "execution_count": 458
         }
       ]
     },
@@ -303,7 +303,7 @@
         "  else:\n",
         "    return column  "
       ],
-      "execution_count": 366,
+      "execution_count": 429,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "def change_to_object(column):\n",
         "  return eval(column)"
       ],
-      "execution_count": 362,
+      "execution_count": 430,
       "outputs": []
     },
     {
@@ -326,7 +326,7 @@
       "source": [
         "df.loc[~df['Rating'].isna(),'Rating'] = df.loc[~df['Rating'].isna(),'Rating'].apply(cleanrating)"
       ],
-      "execution_count": 367,
+      "execution_count": 431,
       "outputs": []
     },
     {
@@ -337,10 +337,9 @@
       "source": [
         "for i in range(len(df['Reviews'])):\n",
         "  if df.loc[i,'Reviews'][-1] == 'M':\n",
-        "    # print(df.loc[i,'Reviews'])\n",
         "    df.loc[i,'Reviews'] = df.loc[i,'Reviews'].replace('M','')"
       ],
-      "execution_count": 374,
+      "execution_count": 432,
       "outputs": []
     },
     {
@@ -351,7 +350,7 @@
       "source": [
         "df.loc[~df['Reviews'].isna(),'Reviews'] = df.loc[~df['Reviews'].isna(),'Reviews'].apply(change_to_object)"
       ],
-      "execution_count": null,
+      "execution_count": 433,
       "outputs": []
     },
     {
@@ -361,12 +360,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQmKIAd57_2R",
-        "outputId": "8822f821-a7ce-4b00-901b-e4ecd1f8ef86"
+        "outputId": "efa82278-c6fa-4c00-d1f9-3ede688451c7"
       },
       "source": [
         "type(df['Reviews'][0])"
       ],
-      "execution_count": 380,
+      "execution_count": 434,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +377,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 380
+          "execution_count": 434
         }
       ]
     },
@@ -388,10 +387,257 @@
         "id": "4uiRuTd48Dpn"
       },
       "source": [
-        ""
+        "df.rename(columns={'Size':'Size in mega-bytes'},inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 435,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MBI8qvL49iWw"
+      },
+      "source": [
+        "for i in range(len(df['Size in mega-bytes'])):\n",
+        "  if df.loc[i,'Size in mega-bytes'][-1] == 'M':\n",
+        "    df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('M','')"
+      ],
+      "execution_count": 436,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RBIcHeku-x3W"
+      },
+      "source": [
+        "for i in range(len(df['Size in mega-bytes'])):\n",
+        "  if df.loc[i,'Size in mega-bytes'] == 'Varies with device':\n",
+        "    df.loc[i,'Size in mega-bytes'] = np.nan"
+      ],
+      "execution_count": 437,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iGkrPAY6_Fo_"
+      },
+      "source": [
+        "for i in range(len(df['Size in mega-bytes'])):\n",
+        "  try:\n",
+        "    if df.loc[i,'Size in mega-bytes'][-1] == 'k':\n",
+        "      df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('k','000')\n",
+        "    if df.loc[i,'Size in mega-bytes'][-1] == '+':\n",
+        "      df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('+','')  \n",
+        "  except:\n",
+        "    pass    "
+      ],
+      "execution_count": 438,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ysBAoZTs-XMj"
+      },
+      "source": [
+        "df.loc[~df['Size in mega-bytes'].isna(),'Size in mega-bytes'] = df.loc[~df['Size in mega-bytes'].isna(),'Size in mega-bytes'].apply(change_to_object)"
+      ],
+      "execution_count": 439,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LAVja08V_c_U",
+        "outputId": "a0138fb3-e092-4762-dd52-f4e4a98b3132"
+      },
+      "source": [
+        "type(df['Size in mega-bytes'][2])"
+      ],
+      "execution_count": 440,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 440
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KWzUuGSg_hSA"
+      },
+      "source": [
+        "for i in range(len(df['Installs'])):\n",
+        "  if df.loc[i,'Installs'][-1] == '+':\n",
+        "    df.loc[i,'Installs'] = df.loc[i,'Installs'].replace('+','')"
+      ],
+      "execution_count": 443,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Boksj5YRA_Ro"
+      },
+      "source": [
+        "for i in range(len(df['Installs'])):\n",
+        "  if df.loc[i,'Installs'] == 'Free':\n",
+        "    df.loc[i,'Installs'] = df.loc[i,'Installs'].replace('Free','0')"
+      ],
+      "execution_count": 444,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w5Z-znKkCEzJ"
+      },
+      "source": [
+        "def cleaninstalls(column):\n",
+        "  return column.replace(',','')"
+      ],
+      "execution_count": 445,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LIp5Gw7iCbA9"
+      },
+      "source": [
+        "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(cleaninstalls)"
+      ],
+      "execution_count": 446,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "edUJAG2UAvIW"
+      },
+      "source": [
+        "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(change_to_object)"
+      ],
+      "execution_count": 447,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cTM_Q2WqBqmx",
+        "outputId": "7608a48e-0df4-4e15-c6b6-bec8fe4bcabf"
+      },
+      "source": [
+        "type(df['Installs'][2])"
+      ],
+      "execution_count": 448,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 448
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AMOfIfZXC4ve"
+      },
+      "source": [
+        "for i in range(len(df['Price'])):\n",
+        "  if df.loc[i,'Price'][0] == '$':\n",
+        "    df.loc[i,'Price'] = df.loc[i,'Price'].replace('$','')"
+      ],
+      "execution_count": 450,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PINzKzgODNW7"
+      },
+      "source": [
+        "for i in range(len(df['Price'])):\n",
+        "  if df.loc[i,'Price'] == 'Everyone':\n",
+        "    df.loc[i,'Price'] = np.nan"
+      ],
+      "execution_count": 453,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UGcGb7cjCn03"
+      },
+      "source": [
+        "df.loc[~df['Price'].isna(),'Price'] = df.loc[~df['Price'].isna(),'Price'].apply(change_to_object)"
+      ],
+      "execution_count": 454,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wY5eaiVWDgzi"
+      },
+      "source": [
+        "df.rename(columns={'Price':'Price in dollars'},inplace=True)"
+      ],
+      "execution_count": 456,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LpfTog1LDdOq",
+        "outputId": "ba053801-709f-4b6f-d0cd-1cee03411c2b"
+      },
+      "source": [
+        "type(df['Price in dollars'][2])"
+      ],
+      "execution_count": 457,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 457
+        }
+      ]
     }
   ]
 }
