--- a/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
+++ b/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
@@ -97,7 +97,7 @@
         "path = '/content/drive/MyDrive/Colab Notebooks/projects/EDA - playstore app review analysis/DAT files/Copy of Play Store Data.csv'\n",
         "df = pd.read_csv(path)"
       ],
-      "execution_count": 425,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         " \n",
         "  return column.replace(' ','/').replace(',','').replace('.','/').replace('?',np.nan).replace('NA',np.nan)"
       ],
-      "execution_count": 426,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "  except:\n",
         "    return column    "
       ],
-      "execution_count": 427,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,15 +140,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 314
+          "height": 297
         },
         "id": "HkB-8mj3_7E_",
-        "outputId": "7119b854-a37d-48bc-f0e5-f44152449703"
+        "outputId": "307619fa-757d-46f6-cd75-aa4bfdd56505"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 458,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,10 +176,10 @@
               "      <th>Category</th>\n",
               "      <th>Rating</th>\n",
               "      <th>Reviews</th>\n",
-              "      <th>Size in mega-bytes</th>\n",
+              "      <th>Size</th>\n",
               "      <th>Installs</th>\n",
               "      <th>Type</th>\n",
-              "      <th>Price in dollars</th>\n",
+              "      <th>Price</th>\n",
               "      <th>Content Rating</th>\n",
               "      <th>Genres</th>\n",
               "      <th>Last Updated</th>\n",
@@ -193,9 +193,9 @@
               "      <td>Photo Editor &amp; Candy Camera &amp; Grid &amp; ScrapBook</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.1</td>\n",
-              "      <td>159.0</td>\n",
-              "      <td>19</td>\n",
-              "      <td>10000</td>\n",
+              "      <td>159</td>\n",
+              "      <td>19M</td>\n",
+              "      <td>10,000+</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -209,9 +209,9 @@
               "      <td>Coloring book moana</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>3.9</td>\n",
-              "      <td>967.0</td>\n",
-              "      <td>14</td>\n",
-              "      <td>500000</td>\n",
+              "      <td>967</td>\n",
+              "      <td>14M</td>\n",
+              "      <td>500,000+</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -225,9 +225,9 @@
               "      <td>U Launcher Lite – FREE Live Cool Themes, Hide ...</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.7</td>\n",
-              "      <td>87510.0</td>\n",
-              "      <td>8.7</td>\n",
-              "      <td>5000000</td>\n",
+              "      <td>87510</td>\n",
+              "      <td>8.7M</td>\n",
+              "      <td>5,000,000+</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -241,9 +241,9 @@
               "      <td>Sketch - Draw &amp; Paint</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.5</td>\n",
-              "      <td>215644.0</td>\n",
-              "      <td>25</td>\n",
-              "      <td>50000000</td>\n",
+              "      <td>215644</td>\n",
+              "      <td>25M</td>\n",
+              "      <td>50,000,000+</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Teen</td>\n",
@@ -257,9 +257,9 @@
               "      <td>Pixel Draw - Number Art Coloring Book</td>\n",
               "      <td>ART_AND_DESIGN</td>\n",
               "      <td>4.3</td>\n",
-              "      <td>967.0</td>\n",
-              "      <td>2.8</td>\n",
-              "      <td>100000</td>\n",
+              "      <td>967</td>\n",
+              "      <td>2.8M</td>\n",
+              "      <td>100,000+</td>\n",
               "      <td>Free</td>\n",
               "      <td>0</td>\n",
               "      <td>Everyone</td>\n",
@@ -286,8 +286,17 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 458
+          "execution_count": 461
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M4hJ4SXgXloD"
+      },
+      "source": [
+        "#cleaning rating column"
       ]
     },
     {
@@ -303,7 +312,7 @@
         "  else:\n",
         "    return column  "
       ],
-      "execution_count": 429,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +324,7 @@
         "def change_to_object(column):\n",
         "  return eval(column)"
       ],
-      "execution_count": 430,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -326,8 +335,17 @@
       "source": [
         "df.loc[~df['Rating'].isna(),'Rating'] = df.loc[~df['Rating'].isna(),'Rating'].apply(cleanrating)"
       ],
-      "execution_count": 431,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iXcUDvrPXtAr"
+      },
+      "source": [
+        "# cleaning reviews column"
+      ]
     },
     {
       "cell_type": "code",
@@ -339,7 +357,7 @@
         "  if df.loc[i,'Reviews'][-1] == 'M':\n",
         "    df.loc[i,'Reviews'] = df.loc[i,'Reviews'].replace('M','')"
       ],
-      "execution_count": 432,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +368,7 @@
       "source": [
         "df.loc[~df['Reviews'].isna(),'Reviews'] = df.loc[~df['Reviews'].isna(),'Reviews'].apply(change_to_object)"
       ],
-      "execution_count": 433,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,12 +378,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQmKIAd57_2R",
-        "outputId": "efa82278-c6fa-4c00-d1f9-3ede688451c7"
+        "outputId": "4fa1bab8-6173-4af1-89f0-c0004a38acd2"
       },
       "source": [
         "type(df['Reviews'][0])"
       ],
-      "execution_count": 434,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,20 +395,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 434
+          "execution_count": 479
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "4uiRuTd48Dpn"
+        "id": "b5kuuQZmXw1S"
       },
       "source": [
-        "df.rename(columns={'Size':'Size in mega-bytes'},inplace=True)"
-      ],
-      "execution_count": 435,
-      "outputs": []
+        "# cleaning size column"
+      ]
     },
     {
       "cell_type": "code",
@@ -398,11 +414,11 @@
         "id": "MBI8qvL49iWw"
       },
       "source": [
-        "for i in range(len(df['Size in mega-bytes'])):\n",
-        "  if df.loc[i,'Size in mega-bytes'][-1] == 'M':\n",
-        "    df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('M','')"
+        "for i in range(len(df['Size'])):\n",
+        "  if df.loc[i,'Size'][-1] == 'M':\n",
+        "    df.loc[i,'Size'] = df.loc[i,'Size'].replace('M','')"
       ],
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -411,11 +427,11 @@
         "id": "RBIcHeku-x3W"
       },
       "source": [
-        "for i in range(len(df['Size in mega-bytes'])):\n",
-        "  if df.loc[i,'Size in mega-bytes'] == 'Varies with device':\n",
-        "    df.loc[i,'Size in mega-bytes'] = np.nan"
+        "for i in range(len(df['Size'])):\n",
+        "  if df.loc[i,'Size'] == 'Varies with device':\n",
+        "    df.loc[i,'Size'] = np.nan"
       ],
-      "execution_count": 437,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,16 +440,16 @@
         "id": "iGkrPAY6_Fo_"
       },
       "source": [
-        "for i in range(len(df['Size in mega-bytes'])):\n",
+        "for i in range(len(df['Size'])):\n",
         "  try:\n",
-        "    if df.loc[i,'Size in mega-bytes'][-1] == 'k':\n",
-        "      df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('k','000')\n",
-        "    if df.loc[i,'Size in mega-bytes'][-1] == '+':\n",
-        "      df.loc[i,'Size in mega-bytes'] = df.loc[i,'Size in mega-bytes'].replace('+','')  \n",
+        "    if df.loc[i,'Size'][-1] == 'k':\n",
+        "      df.loc[i,'Size'] = df.loc[i,'Size'].replace('k','000')\n",
+        "    if df.loc[i,'Size'][-1] == '+':\n",
+        "      df.loc[i,'Size'] = df.loc[i,'Size'].replace('+','')  \n",
         "  except:\n",
         "    pass    "
       ],
-      "execution_count": 438,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,9 +458,20 @@
         "id": "ysBAoZTs-XMj"
       },
       "source": [
-        "df.loc[~df['Size in mega-bytes'].isna(),'Size in mega-bytes'] = df.loc[~df['Size in mega-bytes'].isna(),'Size in mega-bytes'].apply(change_to_object)"
+        "df.loc[~df['Size'].isna(),'Size'] = df.loc[~df['Size'].isna(),'Size'].apply(change_to_object)"
       ],
-      "execution_count": 439,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dw7e-qLWGJPz"
+      },
+      "source": [
+        "df.rename(columns={'Size':'Size in mb'},inplace=True)"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,12 +481,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAVja08V_c_U",
-        "outputId": "a0138fb3-e092-4762-dd52-f4e4a98b3132"
+        "outputId": "733384e5-68f1-473f-b7fb-525029f861c3"
       },
       "source": [
-        "type(df['Size in mega-bytes'][2])"
+        "type(df['Size in mb'][2])"
       ],
-      "execution_count": 440,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,8 +498,26 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 440
+          "execution_count": 486
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KzaSuCvVX17U"
+      },
+      "source": [
+        "#cleaning installs column"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fOPMXIJjX1zs"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -485,7 +530,7 @@
         "  if df.loc[i,'Installs'][-1] == '+':\n",
         "    df.loc[i,'Installs'] = df.loc[i,'Installs'].replace('+','')"
       ],
-      "execution_count": 443,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,9 +541,9 @@
       "source": [
         "for i in range(len(df['Installs'])):\n",
         "  if df.loc[i,'Installs'] == 'Free':\n",
-        "    df.loc[i,'Installs'] = df.loc[i,'Installs'].replace('Free','0')"
+        "    df.loc[i,'Installs'] = np.nan"
       ],
-      "execution_count": 444,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -510,7 +555,7 @@
         "def cleaninstalls(column):\n",
         "  return column.replace(',','')"
       ],
-      "execution_count": 445,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +566,7 @@
       "source": [
         "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(cleaninstalls)"
       ],
-      "execution_count": 446,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,7 +577,7 @@
       "source": [
         "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(change_to_object)"
       ],
-      "execution_count": 447,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -547,7 +592,7 @@
       "source": [
         "type(df['Installs'][2])"
       ],
-      "execution_count": 448,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,6 +609,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gzt1GEIZX5Kn"
+      },
+      "source": [
+        "#cleaning price column"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AMOfIfZXC4ve"
@@ -573,7 +627,7 @@
         "  if df.loc[i,'Price'][0] == '$':\n",
         "    df.loc[i,'Price'] = df.loc[i,'Price'].replace('$','')"
       ],
-      "execution_count": 450,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -586,7 +640,7 @@
         "  if df.loc[i,'Price'] == 'Everyone':\n",
         "    df.loc[i,'Price'] = np.nan"
       ],
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +651,7 @@
       "source": [
         "df.loc[~df['Price'].isna(),'Price'] = df.loc[~df['Price'].isna(),'Price'].apply(change_to_object)"
       ],
-      "execution_count": 454,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +662,7 @@
       "source": [
         "df.rename(columns={'Price':'Price in dollars'},inplace=True)"
       ],
-      "execution_count": 456,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -623,7 +677,7 @@
       "source": [
         "type(df['Price in dollars'][2])"
       ],
-      "execution_count": 457,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
