--- a/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
+++ b/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
@@ -61,7 +61,7 @@
         "from datetime import datetime\n",
         "from datetime import date\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -71,13 +71,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "02FPP_W3PyMP",
-        "outputId": "2c6284d4-0216-4aa7-eebf-76dca0a09d9d"
+        "outputId": "a32f7c6e-97fb-4299-bcde-4cd8b02b047a"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
         "path = '/content/drive/MyDrive/Colab Notebooks/projects/EDA - playstore app review analysis/DAT files/Copy of Play Store Data.csv'\n",
         "df = pd.read_csv(path)"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -143,12 +143,12 @@
           "height": 297
         },
         "id": "HkB-8mj3_7E_",
-        "outputId": "307619fa-757d-46f6-cd75-aa4bfdd56505"
+        "outputId": "3a053f73-2ee9-46f8-8aa3-dcdfdb089383"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 461
+          "execution_count": 5
         }
       ]
     },
@@ -312,7 +312,7 @@
         "  else:\n",
         "    return column  "
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "def change_to_object(column):\n",
         "  return eval(column)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -335,8 +335,36 @@
       "source": [
         "df.loc[~df['Rating'].isna(),'Rating'] = df.loc[~df['Rating'].isna(),'Rating'].apply(cleanrating)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cR7srbfrMZ7e",
+        "outputId": "b6859124-a290-40d0-dd56-15869ebd0a26"
+      },
+      "source": [
+        "type(df['Rating'][0])"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -357,7 +385,7 @@
         "  if df.loc[i,'Reviews'][-1] == 'M':\n",
         "    df.loc[i,'Reviews'] = df.loc[i,'Reviews'].replace('M','')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -368,7 +396,7 @@
       "source": [
         "df.loc[~df['Reviews'].isna(),'Reviews'] = df.loc[~df['Reviews'].isna(),'Reviews'].apply(change_to_object)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -378,12 +406,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FQmKIAd57_2R",
-        "outputId": "4fa1bab8-6173-4af1-89f0-c0004a38acd2"
+        "outputId": "45840945-16ae-4f15-f861-06516a7f65c2"
       },
       "source": [
         "type(df['Reviews'][0])"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +423,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 479
+          "execution_count": 12
         }
       ]
     },
@@ -418,7 +446,7 @@
         "  if df.loc[i,'Size'][-1] == 'M':\n",
         "    df.loc[i,'Size'] = df.loc[i,'Size'].replace('M','')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -431,7 +459,7 @@
         "  if df.loc[i,'Size'] == 'Varies with device':\n",
         "    df.loc[i,'Size'] = np.nan"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -449,7 +477,7 @@
         "  except:\n",
         "    pass    "
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -460,7 +488,7 @@
       "source": [
         "df.loc[~df['Size'].isna(),'Size'] = df.loc[~df['Size'].isna(),'Size'].apply(change_to_object)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -471,7 +499,7 @@
       "source": [
         "df.rename(columns={'Size':'Size in mb'},inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -481,12 +509,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAVja08V_c_U",
-        "outputId": "733384e5-68f1-473f-b7fb-525029f861c3"
+        "outputId": "9b8767da-9e91-4c8c-818c-e78adc281921"
       },
       "source": [
         "type(df['Size in mb'][2])"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +526,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 486
+          "execution_count": 18
         }
       ]
     },
@@ -530,7 +558,7 @@
         "  if df.loc[i,'Installs'][-1] == '+':\n",
         "    df.loc[i,'Installs'] = df.loc[i,'Installs'].replace('+','')"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -543,7 +571,7 @@
         "  if df.loc[i,'Installs'] == 'Free':\n",
         "    df.loc[i,'Installs'] = np.nan"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -555,7 +583,7 @@
         "def cleaninstalls(column):\n",
         "  return column.replace(',','')"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -566,7 +594,7 @@
       "source": [
         "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(cleaninstalls)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -577,7 +605,7 @@
       "source": [
         "df.loc[~df['Installs'].isna(),'Installs'] = df.loc[~df['Installs'].isna(),'Installs'].apply(change_to_object)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -587,24 +615,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTM_Q2WqBqmx",
-        "outputId": "7608a48e-0df4-4e15-c6b6-bec8fe4bcabf"
+        "outputId": "768a518e-1535-4486-e094-c81e1b21cf17"
       },
       "source": [
         "type(df['Installs'][2])"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "numpy.int64"
+              "int"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 448
+          "execution_count": 24
         }
       ]
     },
@@ -627,7 +655,7 @@
         "  if df.loc[i,'Price'][0] == '$':\n",
         "    df.loc[i,'Price'] = df.loc[i,'Price'].replace('$','')"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -640,7 +668,7 @@
         "  if df.loc[i,'Price'] == 'Everyone':\n",
         "    df.loc[i,'Price'] = np.nan"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -651,7 +679,7 @@
       "source": [
         "df.loc[~df['Price'].isna(),'Price'] = df.loc[~df['Price'].isna(),'Price'].apply(change_to_object)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -662,7 +690,7 @@
       "source": [
         "df.rename(columns={'Price':'Price in dollars'},inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -672,12 +700,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LpfTog1LDdOq",
-        "outputId": "ba053801-709f-4b6f-d0cd-1cee03411c2b"
+        "outputId": "66d82549-709c-4b6e-b2d9-290106333df7"
       },
       "source": [
         "type(df['Price in dollars'][2])"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,9 +717,154 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 457
+          "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i-GeUjAcLb71"
+      },
+      "source": [
+        "def convert_date(date):\n",
+        "  list_date = []\n",
+        "  date_list = date.split(' ')\n",
+        "  try:\n",
+        "    for i in range(len(date_list)):\n",
+        "      if date_list[0] == 'January':\n",
+        "        list_date.append('1')\n",
+        "      if date_list[0] == 'February':\n",
+        "        list_date.append('2')\n",
+        "      if date_list[0] == 'March':\n",
+        "        list_date.append('3')\n",
+        "      if date_list[0] == 'April':\n",
+        "        list_date.append('4')\n",
+        "      if date_list[0] == 'May':\n",
+        "        list_date.append('5')\n",
+        "      if date_list[0] == 'June':\n",
+        "        list_date.append('6')\n",
+        "      if date_list[0] == 'July':\n",
+        "        list_date.append('7')\n",
+        "      if date_list[0] == 'August':\n",
+        "        list_date.append('8')\n",
+        "      if date_list[0] == 'September':\n",
+        "        list_date.append('9')\n",
+        "      if date_list[0] == 'October':\n",
+        "        list_date.append('10')\n",
+        "      if date_list[0] == 'November':\n",
+        "        list_date.append('11')\n",
+        "      if date_list[0] == 'December':\n",
+        "        list_date.append('12')\n",
+        "      list_date.append('-')\n",
+        "    \n",
+        "      month = date_list[1].replace(',','')\n",
+        "      list_date.append(month)\n",
+        "      list_date.append('-')\n",
+        "      if date_list[2] > '2000':\n",
+        "        list_date.append(date_list[2])\n",
+        "      rev_date = ''.join(list_date)\n",
+        "      final_date = pd.to_datetime(rev_date)\n",
+        "\n",
+        "      return final_date\n",
+        "  except:\n",
+        "    pass"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9KvAMxRtLfRN"
+      },
+      "source": [
+        "df['Last Updated'] = df['Last Updated'].apply(convert_date)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPUuGj40LhQV",
+        "outputId": "4d4af0ba-6718-4186-9f11-58b9fec54618"
+      },
+      "source": [
+        "type(df['Last Updated'][0])"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ErW2oCsBLjI4"
+      },
+      "source": [
+        "def change_format(final_date):\n",
+        "  try:\n",
+        "    new_date = datetime.strptime(str(final_date), '%Y-%m-%d %H:%M:%S')\n",
+        "    ret_date = new_date.strftime('%d/%m/%Y')\n",
+        "    return ret_date\n",
+        "  except:\n",
+        "    pass"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7VGFzz60NUQT"
+      },
+      "source": [
+        "df['Last Updated'] = df['Last Updated'].apply(change_format)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cyOP7k7XNa3n"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LAUBW-7ELllP"
+      },
+      "source": [
+        "# Output of both the functions\n",
+        "given = 'June 18, 2018'\n",
+        "given_1 = convert_date(given)\n",
+        "given_2 = change_format(given_1)\n",
+        "print(given_2)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
