--- a/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
+++ b/Play_Store_App_Review_Analysis_Capstone_Project.ipynb
@@ -61,7 +61,7 @@
         "from datetime import datetime\n",
         "from datetime import date\n"
       ],
-      "execution_count": 3,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "path = '/content/drive/MyDrive/Colab Notebooks/projects/EDA - playstore app review analysis/DAT files/Copy of Play Store Data.csv'\n",
         "df = pd.read_csv(path)"
       ],
-      "execution_count": 41,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -703,7 +703,7 @@
         "outputId": "66d82549-709c-4b6e-b2d9-290106333df7"
       },
       "source": [
-        "type(df['Price in dollars'][2])"
+        "  type(df['Price in dollars'][2]"
       ],
       "execution_count": 29,
       "outputs": [
@@ -722,66 +722,63 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "i-GeUjAcLb71"
+        "id": "bkI6X0GGYg5m"
       },
       "source": [
-        "def convert_date(date):\n",
-        "  list_date = []\n",
-        "  date_list = date.split(' ')\n",
-        "  try:\n",
-        "    for i in range(len(date_list)):\n",
-        "      if date_list[0] == 'January':\n",
-        "        list_date.append('1')\n",
-        "      if date_list[0] == 'February':\n",
-        "        list_date.append('2')\n",
-        "      if date_list[0] == 'March':\n",
-        "        list_date.append('3')\n",
-        "      if date_list[0] == 'April':\n",
-        "        list_date.append('4')\n",
-        "      if date_list[0] == 'May':\n",
-        "        list_date.append('5')\n",
-        "      if date_list[0] == 'June':\n",
-        "        list_date.append('6')\n",
-        "      if date_list[0] == 'July':\n",
-        "        list_date.append('7')\n",
-        "      if date_list[0] == 'August':\n",
-        "        list_date.append('8')\n",
-        "      if date_list[0] == 'September':\n",
-        "        list_date.append('9')\n",
-        "      if date_list[0] == 'October':\n",
-        "        list_date.append('10')\n",
-        "      if date_list[0] == 'November':\n",
-        "        list_date.append('11')\n",
-        "      if date_list[0] == 'December':\n",
-        "        list_date.append('12')\n",
-        "      list_date.append('-')\n",
-        "    \n",
-        "      month = date_list[1].replace(',','')\n",
-        "      list_date.append(month)\n",
-        "      list_date.append('-')\n",
-        "      if date_list[2] > '2000':\n",
-        "        list_date.append(date_list[2])\n",
-        "      rev_date = ''.join(list_date)\n",
-        "      final_date = pd.to_datetime(rev_date)\n",
+        "#cleaning last updated column"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PU_4cngXQrUF"
+      },
+      "source": [
+        "def replacefunc(column):\n",
         "\n",
-        "      return final_date\n",
-        "  except:\n",
-        "    pass"
+        " \n",
+        "  return column.replace(' ','/').replace(',','').replace('.','/').replace('?','').replace('NA','')"
       ],
-      "execution_count": 31,
+      "execution_count": 127,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9KvAMxRtLfRN"
+        "id": "bfvEKI_SQu4E"
       },
       "source": [
-        "df['Last Updated'] = df['Last Updated'].apply(convert_date)"
+        "df.loc[~df['Last Updated'].isna(),'Last Updated'] = df.loc[~df['Last Updated'].isna(),'Last Updated'].apply(replacefunc)"
       ],
-      "execution_count": null,
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z7dy5Tx3Rh_C"
+      },
+      "source": [
+        "def change_to_timestamp(column):\n",
+        "  if column == '1/0/19':\n",
+        "    return np.nan\n",
+        "  else:\n",
+        "    return pd.to_datetime(column) "
+      ],
+      "execution_count": 131,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bZh-3vz7X5vi"
+      },
+      "source": [
+        "df['Last Updated'] = df['Last Updated'].apply(change_to_timestamp)"
+      ],
+      "execution_count": 132,
       "outputs": []
     },
     {
@@ -790,81 +787,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "cPUuGj40LhQV",
-        "outputId": "4d4af0ba-6718-4186-9f11-58b9fec54618"
+        "id": "N7cMN517Ubrp",
+        "outputId": "7dfe2686-d009-4bfd-c4bd-181592297d13"
       },
       "source": [
         "type(df['Last Updated'][0])"
       ],
-      "execution_count": 36,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "str"
+              "pandas._libs.tslibs.timestamps.Timestamp"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 133
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ErW2oCsBLjI4"
-      },
-      "source": [
-        "def change_format(final_date):\n",
-        "  try:\n",
-        "    new_date = datetime.strptime(str(final_date), '%Y-%m-%d %H:%M:%S')\n",
-        "    ret_date = new_date.strftime('%d/%m/%Y')\n",
-        "    return ret_date\n",
-        "  except:\n",
-        "    pass"
-      ],
-      "execution_count": 38,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7VGFzz60NUQT"
-      },
-      "source": [
-        "df['Last Updated'] = df['Last Updated'].apply(change_format)"
-      ],
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cyOP7k7XNa3n"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LAUBW-7ELllP"
-      },
-      "source": [
-        "# Output of both the functions\n",
-        "given = 'June 18, 2018'\n",
-        "given_1 = convert_date(given)\n",
-        "given_2 = change_format(given_1)\n",
-        "print(given_2)"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
